[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "valcache"
version = "1.0.0"
description = "Async Redis cache with optional AES-128 encryption powered by mores-encryption"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "HATAKEkakshi"},
]
keywords = [
    "cache",
    "redis",
    "encryption",
    "async",
    "aes",
    "fernet",
    "mores-encryption",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Topic :: Database",
    "Framework :: AsyncIO",
]
dependencies = [
    "redis>=5.0",
    "python-dotenv>=1.0",
    "mores-encryption>=0.1.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "fakeredis>=2.20",
]

[project.urls]
Homepage = "https://github.com/HATAKEkakshi/valcache"
Repository = "https://github.com/HATAKEkakshi/valcache"
Issues = "https://github.com/HATAKEkakshi/valcache/issues"

[tool.setuptools.packages.find]
include = ["valcache*"]
